# Epitech_ZIA

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  config.json  https.json  install_unix.sh  install_windows.bat
certs/: certificate.pem  key.pem
docs/: Doxyfile  Doxyfile.in
modules/HTTP/: HttpModule.cpp  HttpModule.hpp
modules/HTTP/network/tcp/: ReceiveData.hpp  TcpProtocol.cpp  TcpProtocol.hpp  TcpSocket.cpp  TcpSocket.hpp
modules/HTTPS/: HttpsModule.cpp  HttpsModule.hpp
modules/HTTPS/cryption/: Cryption.cpp  Cryption.hpp
modules/HTTPS/network/tcp/: ReceiveData.hpp  TcpProtocol.cpp  TcpProtocol.hpp  TcpSocket.cpp  TcpSocket.hpp
modules/PHP/: PHP_CGI.cpp  PHP_CGI.hpp
modules/PHP/php_rsc/: test.php
server/: ConfigurationHandler.cpp  ConfigurationHandler.hpp  Server.cpp  Server.hpp  ServerException.hpp  main.cpp
server/client/: Client.cpp  Client.hpp
server/core/ExceptionCore/: ExceptionCore.hpp  ZiaHTTPError.hpp
server/core/Request/: ConnectRequest.hpp  DeleteRequest.hpp  GetRequest.hpp  HeadRequest.hpp  IRequest.hpp  OptionsRequest.hpp  PostRequest.hpp  PutRequest.hpp  TraceRequest.hpp
server/core/RequestHandler/: RequestHandler.cpp  RequestHandler.hpp
server/core/RequestParser/: RequestParser.cpp  RequestParser.hpp
server/core/Response/: IResponse.hpp  Response.cpp  Response.hpp
server/exception/: ZiaError.hpp  ZiaHTTPError.hpp
server/include/rapidjson/internal/: regex.h
server/loader/: ADLLoader.hpp  DLLoader.hpp  DynamicLibManager.hpp  ExceptionsDLLoader.hpp
server/modules/: AModule.cpp  AModule.hpp  IModule.cpp  IModule.hpp  ModuleException.hpp  ModuleHandler.cpp  ModuleHandler.hpp  PHP_CGI.cpp  PHP_CGI.hpp
server/modules/HTTP/: HttpModule.cpp  HttpModule.hpp
server/modules/HTTP/network/tcp/: ReceiveData.hpp  TcpProtocol.hpp  TcpSocket.cpp  TcpSocket.hpp
server/network/tcp/: ReceiveData.hpp  TcpProtocol.cpp  TcpProtocol.hpp  TcpSocket.cpp  TcpSocket.hpp
server/routing/Route/: Route.cpp  Route.hpp
server/routing/Router/: Router.cpp  Router.hpp
server/tools/: Log.hpp  Logger.hpp  Utils.hpp
tests/: main.py
tests/file/: indexdel.html
www/: index.html  new.html
www/a/: index.html
